--- a/html/main.css
+++ b/html/main.css
@@ -1,46 +1,57 @@
 /** General Selectors*/
+
 body {
     width: 100%;
     overflow: hidden;
     font-family: 'Oswald', sans-serif;
 }
+
+
 /** General Selectors*/
 
+
 /*? ID Selector */
-#StatusHud 
-{
+
+#StatusHud {
     position: absolute;
     bottom: 0.7vh;
     left: 0.7vh;
+    display: flex;
+    flex-direction: column;
 }
+
+
 /*? ID Selectors */
 
 
 /*! Class Selectors */
-.statback 
-{
+
+.statback {
     background-color: rgba(0, 0, 0, 0.767);
     color: white;
     padding: 0.7vh;
     text-align: center;
     margin-top: 0.2vh;
     border-radius: 0.4vh;
+    height: 2vh;
 }
-.fas 
-{
-    font-size: 0.7rem;
+
+.fas {
+    /* font-size: 0.7rem; */
+    font-size: 1.7rem;
     vertical-align: middle;
 }
-.textstat 
-{
-    width: 2vh;
+
+.textstat {
+    /* width: 2vh; */
+    width: 3vh;
     float: right;
     text-align: right;
-    font-size: 1.0vh;
+    font-size: 1.5vh;
     margin-top: -0.25vh;
 }
-.red 
-{
+
+.red {
     width: 2.2vh;
     float: right;
     padding-left: 0.5vh;
@@ -48,4 +59,6 @@ body {
     font-size: 1.0vh;
     color: red;
 }
+
+
 /*! Class Selectors */
